--- a/countdown-timer/index.html
+++ b/countdown-timer/index.html
@@ -14,15 +14,15 @@
                 <p class="big-text" id="days">0</p>
                 <span>days</span>
             </div>
-            <div class="countdown-el hours-c">
+            <div class="countdown-el days-c">
                 <p class="big-text" id="hours">0</p>
                 <span>hours</span>
             </div>
-            <div class="countdown-el mins-c">
+            <div class="countdown-el days-c">
                 <p class="big-text" id="mins">0</p>
                 <span>mins</span>
             </div>
-            <div class="countdown-el seconds-c">
+            <div class="countdown-el days-c">
                 <p class="big-text" id="seconds">0</p>
                 <span>seconds</span>
             </div>
